# CodeWeaver

./: .env.example  .gitignore  CodeWeaver.py  INSTALL.md  cli.py  main.py  pyproject.toml  readme.md  requirements-analytics.txt  requirements-core.txt  requirements-dev.txt  requirements-export.txt  requirements-web.txt  requirements.txt  run_tests.py  run_tests_simple.py  setup.py
codeweaver/: __init__.py  __version__.py
codeweaver/ai/: __init__.py  conversation_tracker.py  cost_tracker.py  embeddings.py  factory.py  feedback.py  optimization_engine.py  realtime_context.py
codeweaver/cli/: __init__.py  chunked_export.py  embedding_config.py  main.py
codeweaver/config/: __init__.py  embedding_config.py  llm_config.py  model_config.py  profiles.py  settings.py
codeweaver/core/: __init__.py  analyzer.py  content_filter.py  content_sampler.py  dependency_analyzer.py  importance_scorer.py  json_utils.py  models.py  processor.py  project_detector.py  relationship_detector.py  template_manager.py  token_budget.py  tokenizer.py
codeweaver/export/: __init__.py  chunked_exporter.py  formats.py
codeweaver/gui/: __init__.py  components.py  dialogs.py  file_explorer.py  main_window.py  pattern_wizard.py  realtime_counter.py  template_editor.py  token_analysis_dialog.py
codeweaver/mcp/: __init__.py  server.py
codeweaver/utils/: __init__.py  system.py  threading.py
codeweaver/web/: __init__.py  server.py
codeweaver/web/static/: index.html  script.js  style.css
tests/: conftest.py  conftest_broken.py  pytest.ini  requirements-test.txt  test_ai_embeddings.py  test_cli.py  test_cli_comprehensive.py  test_core.py  test_core_models.py  test_export_functions.py  test_gui.py  test_web_interface.py
